Pagina politica socioambiental - finalizada

--- a/regulatorio.html
+++ b/regulatorio.html
@@ -64,7 +64,7 @@
                         <p class="description"><a href="" class="politicas-link">Política PLD/FT ↗</a></p>
                         <p class="description"><a href="" class="politicas-link">Política de Relacionamento com Clientes
                                 ↗</a></p>
-                        <p class="description"><a href="" class="politicas-link">Política de Responsabilidade
+                        <p class="description"><a href="./politica_socioambiental.html" class="politicas-link">Política de Responsabilidade
                                 Socioambiental ↗</a></p>
                     </div>
                     <div class="politicas-text">
